--- a/test/Makefile
+++ b/test/Makefile
@@ -10,19 +10,20 @@ SOURCES += pet/test/MockAllocator.cpp
 #SOURCES += TestFrontConcurrent.cpp
 SOURCES += TestBlobStress.cpp
 SOURCES += TestBlobTree.cpp
-SOURCES += TestBTreeDateTests.cpp
 SOURCES += TestBTreeKVTests.cpp
+SOURCES += TestBTreeDateTests.cpp
 SOURCES += TestBTreePoorHashTests.cpp
-SOURCES += TestBTreeSimpleTests.cpp
 SOURCES += TestFrontGc.cpp
 SOURCES += TestFrontIntegration.cpp
 SOURCES += TestFrontMeta.cpp
 SOURCES += TestFrontMount.cpp
 SOURCES += TestFrontStream.cpp
+SOURCES += TestMockFs.cpp
 SOURCES += TestStorageBufferedStorage.cpp
 SOURCES += TestStorageStorageManager.cpp
 SOURCES += TestUtilPath.cpp
-SOURCES += TestMockFs.cpp
+SOURCES += TestBTreeSimpleTests.cpp
+
 
 # Test support
 
@@ -33,22 +34,18 @@ SOURCES += KVTestKey.cpp
 SOURCES += SimpleKey.cpp
 SOURCES += PoorHashKey.cpp
 
+# 1test
 
-# Failure injector
-
-SOURCES += failure-injector/Addr2lineBacktrace.cpp
-SOURCES += failure-injector/FailureInjectorPlugin.cpp
-SOURCES += failure-injector/FailureInjectorShell.cpp
-SOURCES += failure-injector/FailureSource.cpp
-SOURCES += failure-injector/SimpleStringHelper.cpp
-SOURCES += failure-injector/SourceRecord.cpp
+SOURCES += pet/1test/FailureInjector.cpp
+SOURCES += pet/1test/TestRunner.cpp
+SOURCES += pet/1test/TraceOutput.cpp
+SOURCES += pet/ubiquitous/PrintfWriter.cpp
 
 # Includes
 
 INCLUDE_DIRS += .
 INCLUDE_DIRS += ..
 INCLUDE_DIRS += pet
-INCLUDE_DIRS += failure-injector
 
 # Flags
 
@@ -56,8 +53,7 @@ CXXFLAGS += -std=c++11								# Use the c++ standard released in 2011
 CXXFLAGS += -O0 									# Avoid optimizer screwing up coverage data
 CXXFLAGS += -g3										# Include all available debug info
 CXXFLAGS += -fno-inline								# Do not inline (coverage again)
-CXXFLAGS += -m32									# Use 32 bit mode (to model the target MCUs)
-CXXFLAGS += -fmax-errors=5							# Avoid blowing the console
+CXXFLAGS += -fmax-errors=1							# Avoid blowing the console
 CXXFLAGS += -rdynamic								# Allows meaningful backrtaces 
 CXXFLAGS += --coverage								# Generate program flow data and inject profiling code
 CXXFLAGS += -fno-exceptions							# Enforce no-exceptions environment
@@ -66,12 +62,12 @@ CXXFLAGS += -DCPPUTEST_USE_MEM_LEAK_DETECTION=0		# Turn off broken new operator 
 CXXFLAGS += -Wall									# Enable all warnings
 CXXFLAGS += -Wno-unused								# Except for unused variables
 
-LIBS += CppUTest									# Neat little unit testing framework 
-LIBS += CppUTestExt									# Addition goodness, like mock support
 LIBS += archive										# For the integration test
 
-TEST_CMD_PREFIX=LD_LIBRARY_PATH=/opt/gcc-5.3.0/lib64/:/opt/gcc-5.3.0/lib32/
-CXX=/opt/gcc-5.3.0/bin/g++
+CXX=x86_64-linux-gnu-g++-6
 LD=$(CXX) 
 
 include ultimate-makefile/Makefile.ultimate	
+
+enter:
+	make -C toolchains enter-the-matrix CD_TO=../..
